End of day 1 work
Some basic structure.  Resources, etc.

--- a/mineclick.html
+++ b/mineclick.html
@@ -1,11 +1,27 @@
 <html>
 <head>
+<title>Mineclick</title>
 <link href="js/jquery-ui-1.11.1/jquery-ui.css" rel="stylesheet" />
+<!-- references
 
+* Minecraft "Empire Building Challenge"
+http://www.minecraftforum.net/forums/minecraft-discussion/survival-mode/296505-the-empire-building-challenge-inspired-by-age-of
+concepts: 
+*	"ages"
+
+* Civcraft tech tree
+http://hydra-media.cursecdn.com/civcraft.gamepedia.com/5/5c/Phase_8_TT.jpg
+concepts:
+*	tech tree?
+
+-->
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/buildable.js"></script>
 </head>
 <body>
+
 	<div id="brup">1</div>
+	<table id="resource_container"></table>
 </body>
 </html>
