Body onload of DOM initialization

--- a/mineclick.html
+++ b/mineclick.html
@@ -19,7 +19,7 @@ concepts:
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/buildable.js"></script>
 </head>
-<body>
+<body onload="initializeBoard(); initializedBoard = true;">
 
 	<div id="brup">1</div>
 	<table id="resource_container"></table>
