--- a/mineclick.html
+++ b/mineclick.html
@@ -2,6 +2,7 @@
 <head>
 <title>Mineclick</title>
 <link href="js/jquery-ui-1.11.1/jquery-ui.css" rel="stylesheet" />
+<link href="css/mineclick.css" rel="stylesheet" />
 <!-- references
 
 * Minecraft "Empire Building Challenge"
@@ -16,12 +17,31 @@ concepts:
 
 -->
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="js/story.js"></script>
+<script type="text/javascript" src="js/jqueryify.js"></script>
+<script type="text/javascript" src="js/jquery-ui-1.11.1/jquery-ui.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-<script type="text/javascript" src="js/buildable.js"></script>
 </head>
 <body onload="initializeBoard(); initializedBoard = true;">
+<div id="brup">1</div>
+<div class="page">
+	<div class="content">
+		<div class="content-left contentholder">
+		<h3>Raw Resources</h3>
+			<table id="resource_container"></table>
+		</div>
+		<div class="main-center">
+			<div id="eventDiv" class="contentholder content-center"></div>
+			<button class="clearEvent" onclick="clearEventWindow();">Clear Event Window</button>
+		</div>
+		<div class="content-right contentholder">
+			<h3>Actions</h3>
+			<table id="action_container"></table>
+		</div>
+		<br class="clearer"/>
+	</div>
+	<div class="footer contentholder">&nbsp;</div>
+</div>
 
-	<div id="brup">1</div>
-	<table id="resource_container"></table>
 </body>
 </html>
