--- a/mineclick.html
+++ b/mineclick.html
@@ -16,6 +16,7 @@ http://hydra-media.cursecdn.com/civcraft.gamepedia.com/5/5c/Phase_8_TT.jpg
 concepts:
 *	tech tree?
 
+test
 -->
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="js/story.js"></script>
