Broke story up out of main.js

--- a/mineclick.html
+++ b/mineclick.html
@@ -36,6 +36,7 @@ Select box from http://ivaynberg.github.io/select2/
 <script type="text/javascript" src="js/joyride-master/jquery.joyride-2.1.js"></script>
 <script type="text/javascript" src="js/select2-3.5.1/select2.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/story.js"></script>
 <script>
 	$(document).ready(function() { 
 		$("#availableTerrain").select2({
@@ -82,7 +83,7 @@ Select box from http://ivaynberg.github.io/select2/
 			<h3>Available Terrain</h3>
 			<select id="availableTerrain" class="terrainSelect"><option></option>
 				<option value="null">Select vacant terrainssssssssssssssssssssss</option>
-			</select>
+			</select><span id="availTer">&nbsp;</span>
 		</div>
 	</div>
 </div>
