--- a/mineclick.html
+++ b/mineclick.html
@@ -39,10 +39,6 @@ Select box from http://ivaynberg.github.io/select2/
 <script type="text/javascript" src="js/story.js"></script>
 <script>
 	$(document).ready(function() { 
-		$("#availableTerrain").select2({
-			placeholder: "Select vacant terrain",
-			allowClear: true,
-		}); 
 		
 		//////////////////////////////////////////////////////////////////////////////
 		// SETUP AND GO!
@@ -81,9 +77,9 @@ Select box from http://ivaynberg.github.io/select2/
 	<div class="footer contentholder">
 		<div id="terrainSection" class="footer-left">
 			<h3>Available Terrain</h3>
-			<select id="availableTerrain" class="terrainSelect"><option></option>
-				<option value="null">Select vacant terrainssssssssssssssssssssss</option>
-			</select><span id="availTer">&nbsp;</span>
+			<!--<select id="availableTerrain" class="terrainSelect"><option></option>
+			</select>-->
+			<input id="availableTerrain" class="terrainSelect" /><span id="availTer">&nbsp;</span>
 		</div>
 	</div>
 </div>
