--- a/mineclick.html
+++ b/mineclick.html
@@ -60,7 +60,7 @@ Select box from http://ivaynberg.github.io/select2/
 <div class="page">
 	<div class="content">
 		<div class="content-left contentholder">
-		<h3 class="tooltip">Raw Resources<span>testing</span></h3>
+		<h3 class="tooltip">Raw Resources<span>testing barf barf barf barf barf </span></h3>
 		
 			<table id="resource_container"></table>
 		</div>
@@ -80,6 +80,9 @@ Select box from http://ivaynberg.github.io/select2/
 			<!--<select id="availableTerrain" class="terrainSelect"><option></option>
 			</select>-->
 			<input id="availableTerrain" class="terrainSelect" /><span id="availTer">&nbsp;</span>
+		</div>
+		<div id="selectedTerrain" class="footer-center">
+			<table class="terrainTable"><tr><th colspan="2" id="selectedTerrain">Plains</th></tr><tr><td>Features:</td><td>River</td></tr><tr><td>Special Traits:</td><td>Serene</td></tr></table>
 		</div>
 	</div>
 </div>
