Progress bar working for exploring.

--- a/mineclick.html
+++ b/mineclick.html
@@ -62,11 +62,11 @@ Select box from http://ivaynberg.github.io/select2/
 <div class="page">
 	<div class="content">
 		<div class="content-left contentholder">
-		<h3 class="tooltip" title="barf!" id="rawResources">Raw Resources</h3>
+		<h3>Raw Resources</h3>
 		
 			<table id="resource_container"></table>
 		</div>
-		<div class="main-center">
+		<div id="centerPane" class="main-center">
 			<div id="eventDiv" class="contentholder content-center"></div>
 			<button class="clearEvent" onclick="clearEventWindow();">Clear Event Window</input>
 		</div>
