Researching inventory systems, cleaning code

--- a/mineclick.html
+++ b/mineclick.html
@@ -24,6 +24,14 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Rise of Nations Tech Tree
 * http://ron.heavengames.com/gameinfo/tech/techpage.php?action=Age&seltype=3
 * http://gamestudies.org/articleimages/101_Tech_Tree_RoN.jpg?m
+
+**DESIGN
+
+* General:
+* http://gamedevelopment.tutsplus.com/
+
+* Design of Inventory system & Inventory items
+* http://gamedevelopment.tutsplus.com/articles/designing-an-rpg-inventory-system-that-fits-preliminary-steps--gamedev-14725
 -->
 
 <!-- 
