Refactoring and starting inventory

--- a/mineclick.html
+++ b/mineclick.html
@@ -56,8 +56,8 @@ Select box from http://ivaynberg.github.io/select2/
 			initializeBoard(); 
 		}
 			
-		if (!global.storyStartIntroduceExploreed) {
-			global.storyStartIntroduceExploreed = true;
+		if (!global.storyStarted) {
+			global.storyStarted = true;
 			storyStartIntroduceExplore();
 		}
 
