MAJOR REFACTOR 1: models

--- a/mineclick.html
+++ b/mineclick.html
@@ -44,6 +44,9 @@ Select box from http://ivaynberg.github.io/select2/
 <script type="text/javascript" src="js/joyride-master/jquery.joyride-2.1.js"></script>
 <script type="text/javascript" src="js/select2-3.5.1/select2.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/models/states.js"></script>
+<script type="text/javascript" src="js/models/model.js"></script>
+<script type="text/javascript" src="js/controllers/controller.js"></script>
 <script type="text/javascript" src="js/story.js"></script>
 <script>
 	$(document).ready(function() { 
