MAJOR REFACTOR 2: controllers

--- a/mineclick.html
+++ b/mineclick.html
@@ -43,10 +43,22 @@ Select box from http://ivaynberg.github.io/select2/
 <script type="text/javascript" src="js/jquery-ui-1.11.1/jquery-ui.js"></script>
 <script type="text/javascript" src="js/joyride-master/jquery.joyride-2.1.js"></script>
 <script type="text/javascript" src="js/select2-3.5.1/select2.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+
+<!-- model -->
 <script type="text/javascript" src="js/models/states.js"></script>
 <script type="text/javascript" src="js/models/model.js"></script>
-<script type="text/javascript" src="js/controllers/controller.js"></script>
+
+<!-- controllers -->
+<script type="text/javascript" src="js/controllers/core.js"></script>
+<script type="text/javascript" src="js/controllers/location.js"></script>
+
+<!-- views -->
+
+
+<!-- core game -->
+<script type="text/javascript" src="js/coregame/assets.js"></script>
+
+<script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/story.js"></script>
 <script>
 	$(document).ready(function() { 
