--- a/mineclick.html
+++ b/mineclick.html
@@ -44,6 +44,9 @@ Select box from http://ivaynberg.github.io/select2/
 <script type="text/javascript" src="js/joyride-master/jquery.joyride-2.1.js"></script>
 <script type="text/javascript" src="js/select2-3.5.1/select2.js"></script>
 
+<!-- core -->
+<script type="text/javascript" src="js/constants.js"></script>
+
 <!-- model -->
 <script type="text/javascript" src="js/models/states.js"></script>
 <script type="text/javascript" src="js/models/model.js"></script>
@@ -51,9 +54,15 @@ Select box from http://ivaynberg.github.io/select2/
 <!-- controllers -->
 <script type="text/javascript" src="js/controllers/core.js"></script>
 <script type="text/javascript" src="js/controllers/location.js"></script>
+<script type="text/javascript" src="js/controllers/exploration.js"></script>
 
 <!-- views -->
-
+<script type="text/javascript" src="js/views/core.js"></script>
+<script type="text/javascript" src="js/views/events.js"></script>
+<script type="text/javascript" src="js/views/location.js"></script>
+<script type="text/javascript" src="js/views/explore.js"></script>
+<script type="text/javascript" src="js/views/joyride.js"></script>
+<script type="text/javascript" src="js/views/progressbar.js"></script>
 
 <!-- core game -->
 <script type="text/javascript" src="js/coregame/assets.js"></script>
