Basic inventory item and general inventory holder models

--- a/mineclick.html
+++ b/mineclick.html
@@ -37,6 +37,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 <!-- 
 Thanks to:
 Select2 from http://ivaynberg.github.io/select2/
+Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 -->
 
 <!-- 3rd party libraries -->
@@ -67,7 +68,6 @@ Select2 from http://ivaynberg.github.io/select2/
 
 <!-- core game -->
 <script type="text/javascript" src="js/coregame/assets.js"></script>
-
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/story.js"></script>
 
@@ -95,7 +95,7 @@ Select2 from http://ivaynberg.github.io/select2/
 
 </head>
 <body>
-<div id="brup">1</div>
+<div id="cntr">&nbsp;</div>
 <div class="page">
 	<div class="content">
 		<div class="content-left contentholder">
