Generic inventory model and controller

--- a/mineclick.html
+++ b/mineclick.html
@@ -57,6 +57,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/controllers/core.js"></script>
 <script type="text/javascript" src="js/controllers/location.js"></script>
 <script type="text/javascript" src="js/controllers/exploration.js"></script>
+<script type="text/javascript" src="js/controllers/inventory.js"></script>
 
 <!-- views -->
 <script type="text/javascript" src="js/views/core.js"></script>
