Added more links to ideas

--- a/mineclick.html
+++ b/mineclick.html
@@ -5,12 +5,16 @@
 <link href="css/mineclick.css" rel="stylesheet" />
 <link href="lib/joyride-master/joyride-2.1.css" rel="stylesheet"/>
 <link href="lib/select2-3.5.1/select2.css" rel="stylesheet"/>
-<!-- references
+<!-- ideas
 
 * Minecraft "Empire Building Challenge"
-http://www.minecraftforum.net/forums/minecraft-discussion/survival-mode/296505-the-empire-building-challenge-inspired-by-age-of
+* http://www.citybuildergames.com/index.php/topic,3051.0.html 
+* http://www.minecraftforum.net/forums/minecraft-discussion/survival-mode/296505-the-empire-building-challenge-inspired-by-age-of
 concepts: 
 *	"ages"
+
+* CSS selectors:
+* http://www.w3schools.com/cssref/css_selectors.asp
 
 * Civcraft tech tree
 http://hydra-media.cursecdn.com/civcraft.gamepedia.com/5/5c/Phase_8_TT.jpg
@@ -20,15 +24,22 @@ concepts:
 * Civilization 2 tech tree
 http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 
+* How fast should a game go "auto"
+* http://www.reddit.com/r/incremental_games/comments/2eau8j/query_how_fast_should_a_game_go_auto/
 
 * Rise of Nations Tech Tree
 * http://ron.heavengames.com/gameinfo/tech/techpage.php?action=Age&seltype=3
 * http://gamestudies.org/articleimages/101_Tech_Tree_RoN.jpg?m
 
+* Civ clicker 
+* Developing incrementals - http://dhmholley.co.uk/incrementals-part-2.html
+* http://diveintohtml5.info/storage.html
+* http://dhmholley.co.uk/civclicker-postmortem.html
+
 **DESIGN
 
 * General:
-* http://gamedevelopment.tutsplus.com/
+* Game development design - http://gamedevelopment.tutsplus.com/
 
 * Design of Inventory system & Inventory items
 * http://gamedevelopment.tutsplus.com/articles/designing-an-rpg-inventory-system-that-fits-preliminary-steps--gamedev-14725
