named test button

--- a/mineclick.html
+++ b/mineclick.html
@@ -110,7 +110,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 
 </head>
 <body>
-<input type="button" onClick="ftest1();" />
+<input type="button" onClick="ftest1();" value="ftest1" />
 <span id="cntr">&nbsp;</span>
 <div class="page">
 	<div class="content">
