Web -> IOS article

--- a/mineclick.html
+++ b/mineclick.html
@@ -41,6 +41,9 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * General:
 * Game development design - http://gamedevelopment.tutsplus.com/
 
+* Dark Room - Web -> IOS
+* http://www.gamasutra.com/view/news/212230/A_Dark_Rooms_unique_journey_from_the_web_to_iOS.php
+
 * Design of Inventory system & Inventory items
 * http://gamedevelopment.tutsplus.com/articles/designing-an-rpg-inventory-system-that-fits-preliminary-steps--gamedev-14725
 -->
