--- a/mineclick.html
+++ b/mineclick.html
@@ -62,6 +62,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 
 <!-- core -->
 <script type="text/javascript" src="js/constants.js"></script>
+<script type="text/javascript" src="js/debug.js"></script>
 
 <!-- model -->
 <script type="text/javascript" src="js/models/states.js"></script>
@@ -109,7 +110,8 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 
 </head>
 <body>
-<div id="cntr">&nbsp;</div>
+<input type="button" onClick="ftest1();" />
+<span id="cntr">&nbsp;</span>
 <div class="page">
 	<div class="content">
 		<div class="content-left contentholder">
