--- a/mineclick.html
+++ b/mineclick.html
@@ -46,6 +46,10 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 
 * Design of Inventory system & Inventory items
 * http://gamedevelopment.tutsplus.com/articles/designing-an-rpg-inventory-system-that-fits-preliminary-steps--gamedev-14725
+
+**STORY
+* RPG solo
+* http://www.rpgsolo.com/play.php
 -->
 
 <!-- 
