Travel left and right buttons

--- a/mineclick.html
+++ b/mineclick.html
@@ -144,7 +144,9 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 		</div>
 		<div id="terrainSection" class="footer-center">
 			<input id="availableTerrain" class="terrainSelect" /><span id="availTer">&nbsp;</span><br/>
+			<button class="clearEvent" onclick="travelLeft();" id="doTravelLeft">&lt;--</button>
 			<button class="clearEvent" onclick="doTravel();" id="doTravel">Travel</button>
+			<button class="clearEvent" onclick="travelRight();" id="doTravelRight">--&gt;</button>
 		</div>
 		<div id="selectedTerrain" class="footer-right">
 		</div>
