--- a/mineclick.html
+++ b/mineclick.html
@@ -105,18 +105,19 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 		//////////////////////////////////////////////////////////////////////////////
 		// SETUP AND GO!
 		//////////////////////////////////////////////////////////////////////////////
+		player.inventory = new Inventory(100, {});
 		masterState = new MasterState();
+
 
 		if (hasSavedGameState()) {
 			loadState();
 		}
 
-		//ToDo: NEED TO REMOVE THIS ONCE I'M DONE
 		redrawBoard();
 			
 		if (!global.storyStarted) {
 			global.storyStarted = true;
-			storyStartIntroduceExplore();
+			progressStory();
 		}
 	});
 </script>
@@ -131,13 +132,18 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <div class="page">
 	<div class="content">
 		<div class="content-left contentholder">
-		<div id="resourceTabs">
-		  <ul>
-		    <li><a href="#tabs-1">Hero's Inventory</a></li>
-		  </ul>
-		  <div id="tabs-1">
-		    
-		  </div>
+		<div id="resourceSection">
+		    <table id="resourceTable" style="font-size:10pt" class="contentholder">
+		    	<tr><th colspan="4" width="100">Inventory</th><th width="100">Ground</th></tr>
+		    	<tr><td>Weight:</td><td>10</td><td>/</td><td>100</td><td>&nbsp;	</td>
+		    		<!--
+		    	<tr><td colspan="2"><a title="Weight: 1" class="tooltip">Egg (1)</td><td>5</td><td style="text-align:right"><button>-</button></td><td colspan="4">&nbsp;</td></tr>
+		    	<tr><td colspan="2">Apple</td><td>5</td><td style="text-align:right"><button>-</button></td><td style="text-align:left"><button>+</button></td><td colspan="2">Apple</td><td>4</td></tr>
+		    	<tr><td colspan="4">&nbsp;</td><td style="text-align:left"><button>+</button></td><td colspan="2">Stone</td><td>4</td></tr>
+		    		-->
+		    	<tr><td colspan="4"><a title="Weight: 1" class="tooltip"><button>Apple (5)</button></a></td><td style="text-align:right"><button>Apple (2)</button></td></tr>
+		    	<tr><td colspan="4"><a title="Weight: 1" class="tooltip"><button>Barf borf borf (5)</button></a></td><td style="text-align:right"><button>Apple (2)</button></td></tr>
+		    </table>
 		</div>
 		</div>
 		<div id="centerPane" class="main-center">
