Story only progresses past intended sections

--- a/mineclick.html
+++ b/mineclick.html
@@ -117,7 +117,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 			
 		if (!global.storyStarted) {
 			global.storyStarted = true;
-			progressStory();
+			progressStory(0);  //start game
 		}
 	});
 </script>
