Cleaned up mineclick.html

--- a/mineclick.html
+++ b/mineclick.html
@@ -133,12 +133,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 	<div class="content">
 		<div class="content-left contentholder">
 		<div id="resourceSection">
-		    <table id="resourceTable" style="font-size:10pt" class="contentholder">
-		    	<tr><th colspan="4" width="100">Inventory</th><th width="100">Ground</th></tr>
-		    	<tr><td>Weight:</td><td id="playerWeight">10</td><td>/</td><td id="playerCapacity">100</td><td>&nbsp;</td>
-		    	<tr><td colspan="4"><a title="Weight: 1" class="tooltip"><button onclick="dropItem(0, 'Apple', 1);">Apple (5)</button></a></td><td style="text-align:right" onclick="pickupItem(0, 'Apple', 1);"><button>Apple (2)</button></td></tr>
-		    	<tr><td colspan="4"><a title="Weight: 1" class="tooltip"><button>Barf borf borf (5)</button></a></td><td style="text-align:right"><button>Apple (2)</button></td></tr>
-		    </table>
+		    <table id="resourceTable" style="font-size:10pt" class="contentholder"></table>
 		</div>
 		</div>
 		<div id="centerPane" class="main-center">
