Refactoring and removed double-click's selection of text/table

--- a/mineclick.html
+++ b/mineclick.html
@@ -52,7 +52,9 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * http://www.rpgsolo.com/play.php
 
 ** Media
-* Creative commons photos: http://commons.wikimedia.org/wiki/Main_Page , landscapes: http://commons.wikimedia.org/wiki/Category:Landscapes
+* Creative commons photos: http://commons.wikimedia.org/wiki/Main_Page
+* landscapes: http://commons.wikimedia.org/wiki/Category:Landscapes
+* quality landscapes: http://commons.wikimedia.org/wiki/Category:Quality_images_of_landscapes
 -->
 
 <!-- 
