--- a/mineclick.html
+++ b/mineclick.html
@@ -83,6 +83,8 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/controllers/location.js"></script>
 <script type="text/javascript" src="js/controllers/exploration.js"></script>
 <script type="text/javascript" src="js/controllers/inventory.js"></script>
+<script type="text/javascript" src="js/controllers/terrainAction.js"></script>
+<script type="text/javascript" src="js/controllers/forage.js"></script>
 
 <!-- views -->
 <script type="text/javascript" src="js/views/core.js"></script>
@@ -93,6 +95,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/views/joyride.js"></script>
 <script type="text/javascript" src="js/views/progressbar.js"></script>
 <script type="text/javascript" src="js/views/travel.js"></script>
+<script type="text/javascript" src="js/views/forage.js"></script>
 
 <!-- core game -->
 <script type="text/javascript" src="js/coregame/assets.js"></script>
