--- a/mineclick.html
+++ b/mineclick.html
@@ -36,6 +36,9 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * http://diveintohtml5.info/storage.html
 * http://dhmholley.co.uk/civclicker-postmortem.html
 
+* Alert system: 
+* Noty: http://ned.im/noty/#hi
+
 **DESIGN
 
 * General:
