Alert system link - qtip2
More ideas

--- a/mineclick.html
+++ b/mineclick.html
@@ -38,6 +38,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 
 * Alert system: 
 * Noty: http://ned.im/noty/#hi
+* Qtip2: http://qtip2.com/demos
 
 **DESIGN
 
