Item printable names and unique names, crafting controller

--- a/mineclick.html
+++ b/mineclick.html
@@ -89,6 +89,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/controllers/inventory.js"></script>
 <script type="text/javascript" src="js/controllers/terrainAction.js"></script>
 <script type="text/javascript" src="js/controllers/forage.js"></script>
+<script type="text/javascript" src="js/controllers/craft.js"></script>
 
 <!-- views -->
 <script type="text/javascript" src="js/views/core.js"></script>
