--- a/mineclick.html
+++ b/mineclick.html
@@ -101,6 +101,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/views/progressbar.js"></script>
 <script type="text/javascript" src="js/views/travel.js"></script>
 <script type="text/javascript" src="js/views/forage.js"></script>
+<script type="text/javascript" src="js/views/craft.js"></script>
 
 <!-- core game -->
 <script type="text/javascript" src="js/coregame/assets.js"></script>
