Crafting table now displays

--- a/mineclick.html
+++ b/mineclick.html
@@ -165,7 +165,13 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 		<div id="actionDiv" class="content-right contentholder">
 			<h3>Actions</h3>
 			<table id="action_container"></table>
-		</div>
+        </div>
+		<div id="craftDiv" class="contentholder content-craft">
+            <table id="craftTable" style="font-size:10pt" class="contentholder">
+                <tr><th>blah</th><th>bleh</th></tr>
+                <tr><td>CRAFT</td><td>CRARFEAWF</td></tr>
+            </table>
+        </div>
 		<br class="clearer"/>
 	</div>
 	<div class="footer contentholder">
